# google_review_agent

./: agents_outline.md  main.py  mock_data.csv  pyproject.toml  requirements.txt  structure.bash  test_workflow.ipynb
utils/: utils.py
