[project]
name = "google-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-groq>=1.0.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langsmith>=0.4.42",
    "python-dotenv>=1.2.1",
]
